# auto-scraper-agent

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TESTING.md  generate-icons.mjs  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: agent-command-lifecycle.md  central-agent-logs.md
renderer/: index.html  renderer.js  splash.html
scraper-node/: build.mjs  package-lock.json  package.json  setup-chromium.mjs  tsconfig.json
scraper-node/src/: api-client.ts  auth.ts  central-log-queue.ts  central-log-redaction.ts  index.ts  logger.ts  realtime-watcher.ts  scheduler.ts  scraper.ts  stealth-evasions.d.ts  store.ts  ws-client.ts
scraper-node/src/shared/: config.ts  types.ts
scraper-node/src/shared/browser/: context.ts
scraper-node/src/shared/modules/: base.ts  registry.ts
scraper-node/src/shared/modules/avto-net/: index.ts  parser.ts  selectors.ts
scraper-node/src/shared/modules/bolha/: index.ts  parser.ts  selectors.ts
scraper-node/src/shared/modules/proteini-si/: index.ts  parser.ts  selectors.ts
scraper-node/tests/: api-client.test.ts  auth.test.ts  avto-net.test.ts  base-module.test.ts  bolha.test.ts  logger.test.ts  proteini-si.test.ts  realtime-watcher.test.ts  scheduler.test.ts  store.test.ts  ws-client.test.ts
scraper-node/tests/fixtures/avto-net/: ev.html  negotiable.html  sale-price.html  standard.html  top-ponudba.html
scraper-node/tests/fixtures/bolha/: empty.html  listings.html  pagination.html
scraper-node/tests/fixtures/proteini-si/: in-stock.html  out-of-stock.html
src-tauri/: Cargo.toml  EULA.txt  installer-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tasks/: todo.md
