[package]
name = "auto-scraper-agent"
version = "0.1.0"
edition = "2021"
description = "Auto-Scraper system tray agent"
authors = []

# Prevent a console window from appearing on Windows in release builds.
# (main.rs still has #![windows_subsystem = "windows"] as a belt-and-suspenders guard.)
[profile.release]
panic = "abort"    # smaller binary
codegen-units = 1  # better optimisation

[lib]
name = "auto_scraper_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
