[package]
name = "auto-scraper-agent"
version = "0.1.0"
edition = "2021"
description = "Auto-Scraper system tray agent"
authors = []

# Prevent a console window from appearing on Windows in release builds.
# (main.rs still has #![windows_subsystem = "windows"] as a belt-and-suspenders guard.)
[profile.release]
panic = "abort"    # smaller binary
# codegen-units left at default (16) — parallel codegen shaves 2–4 min off CI
# with no measurable runtime difference for a desktop tray app

[lib]
name = "auto_scraper_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
